--- a/css/template.css
+++ b/css/template.css
@@ -4,8 +4,12 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-/*  Mobile media query */
+.mobile-only { display: none; }
+
+/* Mobile media query */
 @media (max-width: 768px) {
+	.desktop-only { display: none; }
+	.mobile-only { display: block; }
 }
 
 /* Tablet media query */
