--- a/css/scss/template.scss
+++ b/css/scss/template.scss
@@ -1,14 +1,14 @@
-$mobile: 768px;
-$tablet: 1024px;
+@import 'vars';
+@import 'normalize';
 
 .mobile-only {
 	display: none;
-	@media screen and (max-width: $mobile) {
+	@media screen and (max-width: $medium) {
 		display: block;
 	}
 }
 
-@media screen and (max-width: $mobile) {
+@media screen and (max-width: $medium) {
 	.desktop-only {
 		display: none;
 	}
