--- a/css/scss/template.scss
+++ b/css/scss/template.scss
@@ -14,6 +14,18 @@
 	}
 }
 
+.container {
+	display: block;
+	margin: 0 auto;
+	max-width: 1000px;
+	padding: 0 15px;
+
+	@media screen and (max-width: $medium) {
+		max-width: 100%;
+		padding: 0 5px;
+	}
+}
+
 body {
 	// Font weight fix for macs
 	-webkit-font-smoothing: antialiased;
